<resources>
    <string name="app_name">My Application2</string>
    <string name="boxOne" >Box One</string>
    <string name="boxTwo" >Box Two</string>
    <string name="boxThree" >Box Three</string>
    <string name="boxFour" >Box Four</string>
    <string name="boxFive" >Box Five</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
</resources>